--- a/WS02_JS_basics2/workshop2.html
+++ b/WS02_JS_basics2/workshop2.html
@@ -15,20 +15,52 @@
 		<p>Add JavaScript commands in the script-tag of this page, which will write the following text on the browser page. Use HTML-tags to produce the text styles to the 
 		page. <br />
 		  <br />
-		  <em><strong>"If I had nine hours to chop down a tree, I'd spend the first six sharpening my ax."</strong> <br />
+		  <em> <strong>"If I had nine hours to chop down a tree, I'd spend the first six sharpening my ax." </strong> <br />
 		  -- Abraham Lincoln</em></p>
+		  <script>
+    document.write("<p><em><strong>\"If I had nine hours to chop down a tree, I'd spend the first six sharpening my ax.\"</strong></em></p>");
+    document.write("<p>-- Abraham Lincoln</p>");
+  </script>
+
+		
 		
 		<h2>Exercise 2</h2>
 		<p>Create a JavaScript function called repeatingText. It writes out a line of text to the page 50 times.</p>
 		
+		<script>
+		function repeatingText(text = "Hello World") {
+			for (let i = 1; i<=50; i++){
+				document.write(text + "<br>");
+			}
+		}
+		repeatingText();
+		</script>
+
 		<h2>Exercise 3</h2>
 		<p>Create a JavaScript if-statement, which checks if the user is using Mozilla browser. If it is, the browser should load http://www.mozilla.org" page. If not, the browser 
 		should load some other website. Create simple pages to test the code.</p>
 		
+<script>
+	console.log(navigator.userAgent);
+	if(navigator.userAgent)
+  </script>
+
 		<h2>Exercise 4</h2>
 		<p>Create a simple web page, where JavaScript confirm-dialog will pop out asking if the user is a student or not. If the user clicks OK write "Welcome student" to the 
-		page. If the user clicks cancel, write on the page: "Sorry, this page is for students only".</p>
-		
+		page. If the user clicks cancel, write on the page: "Sorry, this page is for students only".</br></p>
+		<script>
+			var isStudent = confirm("Are You a Student")
+			if (isStudent) {
+				document.write("<h2>Welcome Student</h2>")
+				
+			}
+			else{
+				document.write('<h2>This page is only for students</h2>')
+			}
+
+
+
+		</script>
 		<h2>Exercise 5</h2>
 		Use document.write to output an image tag with a real image to the page. When you're done, try writing a JavaScript function to display a random image from the following list of images. HINT: You can access individual images using the table index.  Images[0] for example contains the url: "<a href="http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg">http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg</a>".
 
