--- a/WS02_JS_basics2/workshop2.html
+++ b/WS02_JS_basics2/workshop2.html
@@ -40,10 +40,15 @@
 		<p>Create a JavaScript if-statement, which checks if the user is using Mozilla browser. If it is, the browser should load http://www.mozilla.org" page. If not, the browser 
 		should load some other website. Create simple pages to test the code.</p>
 		
-<script>
-	console.log(navigator.userAgent);
-	if(navigator.userAgent)
-  </script>
+<1script>
+	
+	if (navigator.userAgent.includes("Mozilla")) {
+		window.location.href = "http://www.mozilla.org";
+}
+	else {
+		window.location.href = "https://www.google.fi/"
+}
+</script>
 
 		<h2>Exercise 4</h2>
 		<p>Create a simple web page, where JavaScript confirm-dialog will pop out asking if the user is a student or not. If the user clicks OK write "Welcome student" to the 
@@ -72,7 +77,14 @@
 			];
 		</pre>
 		<script>
-            <!-- JavaScript goes here -->
+			var images =[
+				"http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg", 
+				"http://farm1.staticflickr.com/33/45336904_1aef569b30_n.jpg", 
+				"http://farm6.staticflickr.com/5211/5384592886_80a512e2c9.jpg"
+			];
+			Math.floor(Math.random() * images.length)
+			let randomIndex = Math.floor(Math.random() * images.length);
+			document.write("<img src='" + images[randomIndex] + "'>");
 		</script>
 	</body>
 </html>
