--- a/WS02_JS_basics2/workshop2.html
+++ b/WS02_JS_basics2/workshop2.html
@@ -30,7 +30,7 @@
 		<script>
 		function repeatingText(text = "Hello World") {
 			for (let i = 1; i<=50; i++){
-				document.write(text + "<br>");
+				document.write(text);
 			}
 		}
 		repeatingText();
