--- a/workshop2/workshop2.html
+++ b/workshop2/workshop2.html
@@ -40,7 +40,7 @@
 		<p>Create a JavaScript if-statement, which checks if the user is using Mozilla browser. If it is, the browser should load http://www.mozilla.org" page. If not, the browser 
 		should load some other website. Create simple pages to test the code.</p>
 		
-<1script>
+<script>
 	
 	if (navigator.userAgent.includes("Mozilla")) {
 		window.location.href = "http://www.mozilla.org";
