--- a/WS03_JS_events/Workshop03.html
+++ b/WS03_JS_events/Workshop03.html
@@ -5,7 +5,125 @@
         <title>Workshop 3</title>
         <link rel="stylesheet" href="css/styles.css">
         <script>
-            <!-- JavaScript goes here -->
+            function showalert(){
+                alert("You clicked me");
+
+            let currentDate = new Date();
+                 alert("You clicked me! " + currentDate);
+            }
+
+            function showtable(){
+                document.write("<table border='1' cellpadding='5'>");
+                document.write("<tr><th>Name</th><th>Position</th><th>Salary</th></rt>")
+                document.write("<tr><th>Tiger Nixon</th><th>System Architect</th><th>$320,800</th></tr>")
+                document.write("<tr><th>Garrett Winters</th><th>Accountant</th><th>$170,750</th></tr>")
+                document.write("<tr><th>Benjamin Lehtokannas</th><th>Influencer</th><th>$591,260</th></tr>")
+            }
+
+            function showgeo() {
+            let output = document.getElementById("geoResult");
+
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                function(position) {
+                    let lat = position.coords.latitude;
+                    let lon = position.coords.longitude;
+
+
+                    output.innerHTML = "Latitude: " + lat + "<br>Longitude: " + lon;
+
+
+                    console.log("Latitude: " + lat + ", Longitude: " + lon);
+                },
+                function(error) {
+                    output.innerHTML = "Error: " + error.message;
+                    console.error("Geolocation error:", error);
+                }
+                );
+            } else {
+                output.innerHTML = "Geolocation is not supported by this browser.";
+                console.error("Geolocation not supported.");
+            }
+        }
+
+
+
+                document.addEventListener("DOMContentLoaded", function() {
+
+                    var heading = document.getElementById("ex2");
+
+
+                    heading.addEventListener("mouseover", function() {
+                    console.log("Stepped over my a mouse!");
+                    });
+
+
+                    heading.addEventListener("mouseleave", function() {
+                    alert("Bye bye mouse!");
+                    });
+
+                });
+
+
+
+                    document.addEventListener("DOMContentLoaded", function() {
+                        const ex3 = document.getElementById("textdata");
+                        const keycount = document.getElementById("charcount");
+                        const button = document.getElementById("submit");
+                        let count = 0;
+
+
+                        ex3.addEventListener("focus", function() {
+                            ex3.placeholder = "Please fill in the form with proper data.";
+                            ex3.style.backgroundColor = "#e0f7fa";
+                        });
+
+
+                        ex3.addEventListener("keydown", function() {
+                            count++;
+                            keycount.textContent = "Keypresses: " + count;
+                        });
+
+
+                        button.addEventListener("click", function() {
+                            const textValue = ex3.value.trim();
+                            if (textValue === "") {
+                                alert("The textarea is empty! Please fill in the form.");
+                            } else {
+                                alert("Form submitted successfully!\nYour message: " + textValue);
+                            }
+                        });
+                    });
+
+                    document.addEventListener("DOMContentLoaded", function() {
+                        const coordDiv = document.getElementById("coordinates");
+                        const coordsText = document.getElementById("coords"); // optional, if you have <h2 id="coords">
+
+                        if (!coordDiv) {
+                            console.error("DIV with id 'coordinates' not found!");
+                            return;
+                        }
+
+
+                        coordDiv.style.width = "300px";
+                        coordDiv.style.height = "200px";
+                        coordDiv.style.border = "1px solid #000";
+                        coordDiv.style.backgroundColor = "#f0f0f0";
+
+                        coordDiv.addEventListener("mousemove", function(event) {
+                            const x = event.offsetX;
+                            const y = event.offsetY;
+
+                            console.log("X: " + x + ", Y: " + y);
+                            coordDiv.innerHTML = "Mouse coordinates: X=" + x + ", Y=" + y;
+
+
+                            if (coordsText) {
+                                coordsText.innerHTML = "Mouse coordinates: X=" + x + ", Y=" + y;
+                            }
+                        });
+                    });
+
         </script>
     </head>
     <body class="ws3">
@@ -16,9 +134,10 @@
         <h2>Exercise 1</h2>
         <p>Below you will see three buttons. Edit the source code and add an onClick-events to these buttons.</p>
         <p>
-          <button>Click me</button>
-          <button>Show table</button>
-          <button>Geolocation</button>
+          <button onclick = "showalert()"> Click me</button>
+          <button onclick = "showtable()">Show table</button>
+          <button onclick = "showgeo()">Geolocation</button>
+          <p id="geoResult"></p>
         </p>
 
         <ol>
@@ -66,7 +185,7 @@
             <li>The last button should check Geolocation of the user, and output it to the console and to the page. Note: Some browsers might not allow you to do this. Try different browsers if you get errors.</li>
         </ol>
         <hr/>
-        <h2>Exercise 2</h2>
+        <h2 id="ex2">Exercise 2</h2>
         <ul>
             <li>Add an&nbsp;onMouseOver event on the&nbsp;Heading "Exercise 2" of this page.&nbsp;It should&nbsp;fire when the users mouse is moved 
         over&nbsp;it. Output "Stepped over my a mouse!" on the console.</li>
@@ -81,9 +200,9 @@
           <li>When the form button is clicked, check if the textarea is empty. Notify the user with appropriate message. HINT: You can access the Textarea using the following command:   <i>document.getElementById("textdata").value</i>. We will study the forms deeper in Workshops 4 and 5.</li>
         </ul>
         <form>
-            <textarea id="textdata"></textarea><br>
+            <textarea id="textdata" placeholder=""></textarea><br>
             <span id="charcount"></span>
-            <button>Send me</button>
+            <button id="submit">Send me</button>
         </form>
         <hr/>
         <h2>Exercise 4</h2>
