--- a/workshop4/Workshop04.html
+++ b/workshop4/Workshop04.html
@@ -15,8 +15,8 @@
 		<p>&nbsp;Below you will see three buttons. Edit the source code and add an onClick-events to these buttons. Use Developer Console to find the </p>
 		<p>
 		  <button onclick="changeHeading();">Button 1</button>
-		  <button onclick="secondButton">Button 2</button>
-		  <button onclick="">Button 3</button>
+		  <button onclick="sb2()">Button 2</button>
+		  <button onclick="sb3()">Button 3</button>
 		</p>
 
 		<ul>
@@ -27,7 +27,7 @@
 			<strong id="lorem"><em>&quot;Lorem ipsum</em></strong><em> dolor sit amet, consectetuer   adipiscing elit. Sed posuere interdum sem. Quisque ligula eros   ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam   vitae arcu. Sed arcu lectus auctor vitae, consectetuer et venenatis eget   velit. &quot;</em></li>
 		</ul>
 		<hr/>
-		<h2>Exercise 2: DOM Traversing using ID's and classes</h2>
+		<h2 id="e2">Exercise 2: DOM Traversing using ID's and classes</h2>
 		<p class="surprise">Add onchange -events to following checkboxes.</p>
 		<p>
 			<label>
@@ -142,13 +142,192 @@
 		</p>
 		<hr/>
 		<h2>Bonus exercises for the enthusiastics</h2>
+		<button onclick="replaceSelect()">Replace 'Select'</button>
+		<button onclick="replaceAllLi()">Replace All LI</button>
 		<ul>
 			<li dir="ltr">
 				<p dir="ltr">Write a loop, which goes through all the LI tags in the page and replaces them with a &lt;strong&gt; tagged, red text saying &quot;Replaced&quot;.</p>
 			</li>
 			<li dir="ltr">How would you replace the contents only on the ones with the word &lsquo;Select&rsquo; in them?</li>
 		</ul>
+		<script>
+			function changeHeading() {
+				document.querySelector("h1").textContent = "Modified Heading";
+			}
+
+			function sb2() {
+				const heading = document.getElementById("e2");
+
+				heading.style.fontSize = "32px";
+				heading.style.fontStyle = "italic";
+				heading.style.color = "white";
+				heading.style.backgroundColor = "darkred";
+				
+			}
+
+			
+			
+			function sb3() {
+				const paragraphs = document.querySelectorAll("p");
+				const newPara = document.createElement("p");
+				newPara.innerHTML = `
+        <em>
+        "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+        Sed posuere interdum sem. Quisque ligula eros ullamcorper quis, 
+        lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. 
+        Sed arcu lectus auctor vitae, consectetuer et venenatis eget velit."
+        </em>
+		<br><br>
+        <img src="https://tse1.mm.bing.net/th/id/OIP.z2dDdSTpuBTsP6oW7unjKQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Logo">
+    `;
+
+	paragraphs[3].after(newPara);
+			}
+
+			function hide() {
+				const element =document.getElementById("me")
+				element.style.display = "none";
+			}
+			
+			document.getElementById("CheckboxGroup1_1").addEventListener("change", function() {
+				document.getElementById("me").style.display = this.checked ? "block" : "none"
+
+			});
+
+			document.getElementById("CheckboxGroup1_2").addEventListener("change", function() {
+				document.querySelectorAll(".surprise").forEach(el => {
+					el.style.fontSize = this.checked ? "20px" : "";
+    });
+});
+
+			const select = document.getElementById("mySelect");
+			const carImg = document.getElementById("carimage");
+
+			select.addEventListener("change", function(e) {
+				const value = e.target.value;
+
+
+				alert("You selected: " + value);
+
+
+				let imageUrl = "";
+				if (value === "BMW") {
+					imageUrl = "https://www.bmw.fi/content/dam/bmw/common/all-models/m-series/m8-coupe/2022/navigation/bmw-8series-coupe-modellfinder.png";
+				} else if (value === "Audi") {
+					imageUrl = "https://th.bing.com/th/id/OIP.Smk4bxPO-SIqgJUKK1a2sAHaEL?w=306&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3";
+				} else if (value === "Mercedes") {
+					imageUrl = "https://th.bing.com/th/id/R.d2bb572a971ac1b5658d7a48f12685da?rik=lJEQWWtd3gpJGA&riu=http%3a%2f%2f3.bp.blogspot.com%2f-eDNzmaJ46MQ%2fUtOVxqpj5jI%2fAAAAAAAAAb4%2f0Fo1oXJGqzc%2fs1600%2fmercedes-benz-4.jpg&ehk=ijld2biOtGx%2b1OYGHHZ7ca1Rot8hSkpqp09qgNjdjnw%3d&risl=&pid=ImgRaw&r=0";
+				} else if (value === "Volvo") {
+					imageUrl = "https://th.bing.com/th/id/OIP.tOiipExLCNgfC3GAhZbLdAHaEL?w=309&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3";
+				}
+
+				carImg.src = imageUrl;
+			});
+
+
+			carImg.addEventListener("mouseover", function() {
+				this.style.border = "5px solid red";
+			});
+
+			carImg.addEventListener("mouseout", function() {
+				this.style.border = "none";
+			});
+
+
+			function changePosition() {
+			const img = document.getElementById("carimage");
+			img.style.position = "relative";
+			img.style.left = "200px";
+			img.style.top = "500px";
+		}
+
+		let direction = 1;
+		let pos = 0;
+
+		function doMove() {
+			const img = document.getElementById("carimage");
+			img.style.position = "relative";
+			pos += 40*direction;
+
+
+			img.style.left = pos + "px";
+
+			if (pos >= 500 || pos <= 0) {
+				direction *= -1;
+			}
+		}
+
+
+
+			function fadeOut() {
+				const img = document.getElementById("carimage");
+				let opacity = parseFloat(img.style.opacity) || 1;
+
+				const fadeInterval = setInterval(function() {
+					opacity -= 0.1;
+					if (opacity <= 0) {
+						opacity = 0;
+						clearInterval(fadeInterval);
+					}
+					img.style.opacity = opacity;
+				}, 100);
+			}
+
+			function remove() {
+				const img = document.getElementById("carimage");
+				img.remove();
+			}
+
+
+
+			function insertRows() {
+
+				const table = document.getElementById("data").getElementsByTagName("tbody")[0];
+
+
+				const name = document.getElementById("textfield").value;
+				const position = document.getElementById("textfield2").value;
+				const salary = document.getElementById("textfield3").value;
+
+				const newRow = table.insertRow();
+
+
+				const cell1 = newRow.insertCell(0);
+				const cell2 = newRow.insertCell(1);
+				const cell3 = newRow.insertCell(2);
+
+				cell1.textContent = name || "No Name"; 
+				cell2.textContent = position || "No Position";
+				cell3.textContent = salary || "No Salary";
+
+
+				document.getElementById("textfield").value = "";
+				document.getElementById("textfield2").value = "";
+				document.getElementById("textfield3").value = "";
+			}
+
+			function replaceSelect() {
+				const liElements = document.querySelectorAll("li");
+
+				liElements.forEach(li => {
+					if (li.textContent.includes("Select")) {
+						li.innerHTML = li.innerHTML.replace(
+							/Select/g, 
+							'<strong style="color:red;">Replaced</strong>'
+						);
+					}
+				});
+			}
+
+				function replaceAllLi() {
+					const allLi = document.querySelectorAll("li");
+
+					allLi.forEach(li => {
+						li.innerHTML = '<strong style="color:red;">Replaced</strong>';
+					});
+				}
+
+		</script>
 	</body>
 </html>
-
 
