--- a/workshop4/Workshop04.html
+++ b/workshop4/Workshop04.html
@@ -168,8 +168,8 @@
 			
 			
 			function sb3() {
-				const paragraphs = document.getElementById("lorem");
-				paragraphs.innerHTML ="<em>testi </em>";
+				const paragraphs = document.querySelectorAll("em")[1];
+				paragraphs.innerHTML ="<em> uusi sisältö </em>";
 				document.body.style.backgroundColor = "lightgreen";
 
 
